# 123

./: README.md  Resource.h  WP1.cpp  WP1.rc  WP1.vcxproj  WP1.vcxproj.filters  ai_studio_code (9).cpp  grup.cpp  grup.rc  grup.vcxproj  grup.vcxproj.filters  main.sln  proekt.cpp  proekt.vcxproj  proekt.vcxproj.filters
WP1/Debug/: WP1.exe.recipe  WP1.ilk  WP1.res  vc143.idb
WP1/Debug/WP1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  WP1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Игра/: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
